name:                media-governor
version:             0.0.0
license:             MIT
license-file:        LICENSE
copyright:           (c) 2014 Duncan Burke
author:              Duncan Burke <duncankburke@gmail.com>
maintainer:          Duncan Burke <duncankburke@gmail.com>
stability:           unstable
category:            Multimedia
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
synopsis:            Multimedia library manager
-- description:


executable media-governor
  build-depends:       base >=4.7 && <4.8
  -- other-modules:
  default-language:    Haskell2010
  -- Other-extensions:
  buildable:           True
  hs-source-dirs:      .
  main-is:             Main.hs

Source-repository head
  type:          git
  location:      git://github.com/duncanburke/media-governor.git
